# pcap-analyser

./: .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/pcap_analyser/: analysis.py  cli.py  config.py
tests/: test_analysis.py  test_cli.py  test_config.py
